--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "db:migrate": "sequelize db:migrate",
+    "db:refresh": "npm run db:reset && npm run db:migrate",
+    "db:reset": "sequelize db:migrate:undo:all",
+    "db:seed": "sequelize db:seed:all"
   },
   "author": "",
   "license": "ISC",
